force-app/main/default/objects/Account/fields/b3_Contains_D_I__c.field-meta.xml
<CustomField>
    <fullName>b3_Contains_D_I__c</fullName>
    <formula>INCLUDES(b3_Business_Unit__c, &quot;D&amp;I&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shifts Require Facility</label>
    <type>Checkbox</type>
</CustomField>