force-app/main/default/objects/Account/fields/b3_Service_Line__c.field-meta.xml
<CustomField>
    <fullName>b3_Service_Line__c</fullName>
    <label>Service Line</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Line</valueSetName>
    </valueSet>
</CustomField>