force-app/main/default/objects/Account/fields/Migration_ID__c.field-meta.xml
<CustomField>
    <fullName>Migration_ID__c</fullName>
    <externalId>true</externalId>
    <label>Migration ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>