force-app/main/default/objects/Account/fields/NetsuiteInternal_ID__c.field-meta.xml
<CustomField>
    <fullName>NetsuiteInternal_ID__c</fullName>
    <label>Netsuite Internal ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>