force-app/main/default/objects/Account/fields/tc9_eau__Branch__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Branch__c</fullName>
    <description>ATO Branch of Payment Entity for inclusion in STP communication</description>
    <inlineHelpText>ATO Branch of Payment Entity for inclusion in STP communication</inlineHelpText>
    <label>Branch</label>
    <length>10</length>
    <type>Text</type>
</CustomField>