force-app/main/default/objects/Account/fields/tc9_eau__Previous_BMS_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Previous_BMS_Id__c</fullName>
    <description>Indicates the previous BMS Id for STP2 reporting if required.</description>
    <inlineHelpText>Indicates the previous BMS Id for STP2 reporting if required.</inlineHelpText>
    <label>Previous BMS Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>