force-app/main/default/objects/Account/fields/tc9_eau__STP_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__STP_Contact_Email__c</fullName>
    <description>Email address of contact person for inclusion in STP communication</description>
    <inlineHelpText>Email address of contact person for inclusion in STP communication</inlineHelpText>
    <label>STP Contact Email</label>
    <type>Email</type>
</CustomField>