force-app/main/default/objects/Account/fields/tc9_eau__STP_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__STP_Contact_Phone__c</fullName>
    <description>Phone number of contact person for inclusion in STP communication</description>
    <inlineHelpText>Phone number of contact person for inclusion in STP communication</inlineHelpText>
    <label>STP Contact Phone</label>
    <type>Phone</type>
</CustomField>