force-app/main/default/objects/Account/fields/tc9_eau__STP_Declarer_Identifier__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__STP_Declarer_Identifier__c</fullName>
    <description>Declarer Identifier of source payer for inclusion in STP communication</description>
    <inlineHelpText>Declarer Identifier of source payer for inclusion in STP communication</inlineHelpText>
    <label>STP Declarer Identifier</label>
    <length>200</length>
    <type>Text</type>
</CustomField>