force-app/main/default/objects/Account/fields/tc9_eau__Superannuation_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Superannuation_Contact_Email__c</fullName>
    <description>Email address of appointed Superannuation Contact.</description>
    <inlineHelpText>Email address of appointed Superannuation Contact.</inlineHelpText>
    <label>Superannuation Contact Email</label>
    <type>Email</type>
</CustomField>