force-app/main/default/objects/Account/fields/tc9_eau__Superannuation_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Superannuation_Contact_Last_Name__c</fullName>
    <description>Last Name of appointed Superannuation Contact.</description>
    <inlineHelpText>Last Name of appointed Superannuation Contact.</inlineHelpText>
    <label>Superannuation Contact Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>