force-app/main/default/objects/Account/fields/tc9_eau__Superannuation_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Superannuation_Contact_Phone__c</fullName>
    <description>Phone number of appointed Superannuation Contact.</description>
    <inlineHelpText>Phone number of appointed 401k Contact.</inlineHelpText>
    <label>Superannuation Contact Phone</label>
    <type>Phone</type>
</CustomField>