force-app/main/default/objects/Account/fields/tc9_et__Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Bank_Account_Name__c</fullName>
    <description>Records the Bank Account Name of the Invoice Entity. This information is used to provide bank details on invoices for Clients to remit payments</description>
    <inlineHelpText>Records the Bank Account Name of the Invoice Entity. This information is used to provide bank details on invoices for Clients to remit payments</inlineHelpText>
    <label>Bank Account Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>