force-app/main/default/objects/Account/fields/tc9_et__Client_Number__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Client_Number__c</fullName>
    <description>The Client Number applied to the Client</description>
    <inlineHelpText>The Client Number applied to the Client</inlineHelpText>
    <label>Client Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>