force-app/main/default/objects/Account/fields/tc9_et__Default_Invoice_Schedule__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Default_Invoice_Schedule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the default Invoice Schedule that applies to the Client. This value can be overridden at lower levels</description>
    <inlineHelpText>Defines the default Invoice Schedule that applies to the Client. This value can be overridden at lower levels</inlineHelpText>
    <label>Default Invoice Schedule</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Default Invoice Schedule selected on the Account does not have a Record Type of Invoice Schedule</errorMessage>
        <filterItems>
            <field>tc9_pr__Schedule__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Invoice_Schedule</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Schedule__c</referenceTo>
    <relationshipLabel>Accounts with Invoice Schedule</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>