force-app/main/default/objects/Account/fields/tc9_et__Default_Invoice_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Default_Invoice_Tax_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the Default Invoice Tax ID that applies to the Client. This value can be overridden at lower levels</description>
    <inlineHelpText>Defines the Default Invoice Tax ID that applies to the Client. This value can be overridden at lower levels</inlineHelpText>
    <label>Default Invoice Tax ID</label>
    <referenceTo>tc9_et__Invoice_Tax_ID__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>