force-app/main/default/objects/Account/fields/tc9_et__Default_Invoice_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Default_Invoice_Tax_Rate__c</fullName>
    <description>The Default Invoice Tax Rate that will be used for invoicing. Derived from the related Invoice Tax ID record. This value can be overridden at lower levels</description>
    <formula>if (text(  tc9_et__Default_Invoice_Taxable__c  )=&quot;Yes&quot;, tc9_et__Default_Invoice_Tax_ID__r.tc9_et__Tax_Rate__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Default Invoice Tax Rate that will be used for invoicing. Derived from the related Invoice Tax ID record. This value can be overridden at lower levels</inlineHelpText>
    <label>Default Invoice Tax Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>