force-app/main/default/objects/Account/fields/tc9_et__Default_Invoice_Taxable__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Default_Invoice_Taxable__c</fullName>
    <description>Indicates if by default there will be tax applied to the invoice. This value can be overridden at lower levels</description>
    <inlineHelpText>Indicates if by default there will be tax applied to the invoice. This value can be overridden at lower levels</inlineHelpText>
    <label>Default Invoice Taxable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>