force-app/main/default/objects/Account/fields/tc9_et__Exclude_Global_Rate_Calc_Templates__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Exclude_Global_Rate_Calc_Templates__c</fullName>
    <description>Indicates whether global rate calculator templates can be applied to Assignments related to this Account record.</description>
    <inlineHelpText>Indicates whether global rate calculator templates can be applied to Assignments related to this Account record.</inlineHelpText>
    <label>Exclude Global Rate Calc Templates?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>