force-app/main/default/objects/Account/fields/tc9_et__Rate_Calc_Template_Parent__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Rate_Calc_Template_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The client record that holds the parent Rate Calculator</description>
    <inlineHelpText>The client record that holds the parent Rate Calculator</inlineHelpText>
    <label>Rate Calc Template Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>RC_Parent_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>