force-app/main/default/objects/Account/fields/tc9_et__Remittance_Email__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Remittance_Email__c</fullName>
    <description>The email address shown on PDF invoices for remittance advice to be forwarded for the Invoice Entity</description>
    <inlineHelpText>The email address shown on PDF invoices for remittance advice to be forwarded for the Invoice Entity</inlineHelpText>
    <label>Remittance Email</label>
    <type>Email</type>
</CustomField>