force-app/main/default/objects/Account/fields/tc9_et__Send_Invoice_Emails_From_Email__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Send_Invoice_Emails_From_Email__c</fullName>
    <description>Must be an Organization-Wide Address. When the Invoice Setting&apos;s Send Invoice Emails Setting defines the email source as &apos;Invoice Entity Defined&apos; the email address defined in this field will be used as the from / reply to email when emailing invoices.</description>
    <inlineHelpText>Must be an Organization-Wide Address. When the Invoice Setting&apos;s Send Invoice Emails Setting defines the email source as &apos;Invoice Entity Defined&apos; the email address defined in this field will be used as the from / reply to email when emailing invoices.</inlineHelpText>
    <label>Send Invoice Emails From Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Send_Invoice_Emails_From_Email_Picklists</valueSetName>
    </valueSet>
</CustomField>