force-app/main/default/objects/Account/fields/tc9_et__Total_Client_Paid_Expense_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Total_Client_Paid_Expense_Invoiced__c</fullName>
    <description>The sum total of all related Invoice Items with a record type of Client Paid Expense</description>
    <inlineHelpText>The sum total of all related Invoice Items with a record type of Client Paid Expense</inlineHelpText>
    <label>Total Client Paid Expense Invoiced</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>