force-app/main/default/objects/Account/fields/tc9_et__Total_Client_Paid_Expense_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Total_Client_Paid_Expense_Scheduled__c</fullName>
    <description>The sum total of all related Invoiceable Fees with a record type of  Client Paid Expense</description>
    <inlineHelpText>The sum total of all related Invoiceable Fees with a record type of  Client Paid Expense</inlineHelpText>
    <label>Total Client Paid Expense Scheduled</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>