force-app/main/default/objects/Account/fields/tc9_et__Total_Retainer_Fee_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Total_Retainer_Fee_Invoiced__c</fullName>
    <description>The sum total of all related Invoice Items with a record type of Retainer Fee</description>
    <inlineHelpText>The sum total of all related Invoice Items with a record type of Retainer Fee</inlineHelpText>
    <label>Total Retainer Fee Invoiced</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>